kubernetes/payment-api.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: payment-api
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: payment-api
    spec:
      containers:
      - image: brbarnett/payment-api:latest
        name: payment-api
        environment:
        - AMQP_SIDECAR_URI: http://payment-api-amqp-sidecar/payments/payments.create
        - PAYMENT_PROCESSOR_URI: http://payment-processor
      - image: brbarnett/amqp-sidecar:latest
        name: amqp-sidecar
        ports:
        - port: 8080
          targetPort: 80
        environment:
        - RABBITMQ_HOSTNAME: message-broker
        - RABBITMQ_USERNAME: rabbitmq
        - RABBITMQ_PASSWORD: rabbitmq
