kubernetes/payment-processor.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: payment-processor
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: payment-processor
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - image: brbarnett/payment-processor:latest
        name: payment-processor
        ports:
        - containerPort: 80
      - image: brbarnett/amqp-sidecar@sha256:363b798c22d6e6a8ffcceffaac6a15061fff62e11be0c11ec703ee34dc343fb1
        name: amqp-sidecar
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
      - name: config-volume
        configMap:
          name: payment-processor-amqp-sidecar-config
