kubernetes/external-payment-gateway.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-payment-gateway
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: external-payment-gateway
