kubernetes/payment-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-api
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: payment-api
